# s2e-old

./: .cproject  .gitignore  .project  .travis.yml  Android.mk  CHANGES.TXT  INSTALL  LICENSE  Makefile  Makefile.android  Makefile.common  Makefile.target  Makefile.win32  README  README.arm  README.leakalizer  README.s2earm  S2E-AUTHORS  StaticTranslator.cpp  StaticTranslator.h  TranslatorWrapper.cpp  TranslatorWrapper.h  acl.c  aes.h  aio-android.c  aio.c  android-configure.sh  android-rebuild.sh  android.h  android_avm.c  android_avm.h  android_charmap.c  android_config.c  android_console.c  android_debug.c  android_debug.h  android_events.c  android_events.h  android_gps.c  android_gps.h  (+117 more)
CFG/: CBasicBlock.cpp  CBasicBlock.h  CFunction.cpp  CFunction.h
Passes/: CallBuilder.cpp  CallBuilder.h  ForcedInliner.cpp  ForcedInliner.h  FunctionBuilder.cpp  FunctionBuilder.h  GlobalDataFixup.cpp  GlobalDataFixup.h  JumpTableExtractor.cpp  JumpTableExtractor.h  QEMUCallMarker.cpp  QEMUCallMarker.h  QEMUInstructionBoundaryMarker.cpp  QEMUInstructionBoundaryMarker.h  QEMUTbCutter.cpp  QEMUTbCutter.h  QEMUTerminatorMarker.cpp  QEMUTerminatorMarker.h  SystemMemopsRemoval.cpp  SystemMemopsRemoval.h
Runtime/: Makefile  Runtime.cpp
Tests/: Makefile  calltester.c  empty-main.c  fib.c  inline1  simple-global1.c
TranslatorBitcode/: Makefile
afl/: buildafl.sh
afl-1.96b/: afl-fuzz.c  afl-showmap.c  afl-tmin.c  config.h  debug.h
android/: android.h  async-console.h  async-utils.c  async-utils.h  boot-properties.c  boot-properties.h  charmap.c  charmap.h  cmdline-option.c  cmdline-option.h  cmdline-options.h  config.c  console.c  core-connection.c  core-connection.h  core-ui-protocol.c  core-ui-protocol.h  display-core.c  display-core.h  display.c  display.h  framebuffer-common.h  framebuffer-core.c  framebuffer-core.h  framebuffer-ui.c  framebuffer-ui.h  framebuffer.c  framebuffer.h  globals.h  help.c  help.h  hw-control.c  hw-events.c  hw-events.h  hw-lcd.h  hw-qemud.c  hw-qemud.h  hw-sensors.c  hw-sensors.h  looper-generic.c  (+27 more)
android-emulator/: .gitignore  Makefile  Makefile.android  Makefile.common  Makefile.target  android-configure.sh  android-rebuild.sh  async.c  console.c  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  dcache.h  def-helper.h  disas.c  dyngen-exec.h  exec-all.h  exec.c  gdbstub.c  gen-icount.h  hostregs_helper.h  i386-dis.c  json-lexer.c  kvm-all.c  kvm.h  migration-tcp-android.c  migration-tcp.c  monitor.c  osdep.c  osdep.h  qemu-char.c  qemu-common.h  qemu-monitor.hx  qemu-options.hx  qemu-sockets.c  qemu-timer.c  qemu-timer.h  savevm.c  softmmu_defs.h  (+8 more)
audio/: alsaaudio.c  audio.c  audio.h  audio_int.h  audio_pt_int.c  audio_template.h  coreaudio.c  dsoundaudio.c  esdaudio.c  fmodaudio.c  mixeng.c  noaudio.c  ossaudio.c  paaudio.c  sdlaudio.c  wavaudio.c  wavcapture.c  winaudio.c
block/: qcow2-cluster.c  qcow2.c  qcow2.h  raw-posix.c  vvfat.c
buildarm/: Makefile
chef/: .gitignore  README.md  analyze_cfg.sh  analyze_paths.py  batch-lua.yaml  batch-nice.yaml  batch-python.yaml  cmd_server.py  experiment-data-asplos14-cr.yaml  measure_coverage.py  nice_timing.txt  process_expdata.py  run_qemu.py  run_qemu_batch.py
distrib/: build-emulator.sh  build-kernel.sh  build_gcc_qemu_darwin.sh  make-distrib.sh  update-audio.sh
docs/: ANDROID-QEMUD-SERVICES.TXT  ANDROID-QEMUD.TXT  AUDIO.TXT  BuildingLinux.html  BuildingLinux.rst  BuildingS2E.html  BuildingS2E.rst  BuildingS2EManually.html  BuildingS2EManually.rst  BuildingS2EWindows.html  BuildingS2EWindows.rst  CHAR-DEVICES.TXT  CPU-EMULATION.TXT  Contribute.html  Contribute.rst  EquivalenceTesting.html  EquivalenceTesting.rst  ExecutionTracers.html  ExecutionTracers.rst  FAQ.html  FAQ.rst  ImageInstallation.html  ImageInstallation.rst  KERNEL.TXT  Makefile  Parallel.html  ProfilingS2E.html  ProfilingS2E.rst  SystemTap.html  SystemTap.rst  TestingMinimalProgram.html  TestingMinimalProgram.rst  UsingS2EGet.html  UsingS2EGet.rst  WritingPlugins.html  WritingPlugins.rst  config.s2e.i686  index.html  index.rst  rst2html-pygments  (+4 more)
elff/: dwarf_defs.h  dwarf_die.cc  dwarf_die.h  dwarf_utils.cc  elf.h  elf_alloc.h  elf_defs.h  elf_file.cc  elf_file.h  elf_mapped_section.cc  elf_mapped_section.h  elff-common.h  elff_api.h
fpu/: softfloat.c  softfloat.h
guest/: Makefile  configure
hellondk/: .gitignore  .project  AndroidManifest.xml  buildNativeS2EAndroidApp.sh  disassemblehellondk.sh
hw/: android_arm.c  arm-misc.h  arm_pic.c  boards.h  bt-hci.c  goldfish_audio.c  goldfish_battery.c  goldfish_device.c  goldfish_device.h  goldfish_events_device.c  goldfish_fb.c  goldfish_interrupt.c  goldfish_memlog.c  goldfish_mmc.c  goldfish_nand.c  goldfish_nand.h  goldfish_switch.c  goldfish_timer.c  goldfish_trace.c  goldfish_trace.h  goldfish_tty.c  hw.h  irq.c  irq.h  isa.h  pc.c  pci.c  qdev.c  smc91c111.c  usb-ohci.c  watchdog.c  watchdog.h
klee/: LICENSE.TXT  Makefile  Makefile.common  Makefile.config.in  configure
memcheck/: memcheck.c  memcheck.h  memcheck_api.h  memcheck_common.h  memcheck_logging.h  memcheck_malloc_map.c  memcheck_malloc_map.h  memcheck_mmrange_map.c  memcheck_mmrange_map.h  memcheck_proc_management.c  memcheck_proc_management.h  memcheck_util.c  memcheck_util.h
patches/: compiler-rt-3.2-asan4s2e.patch
proxy/: proxy_common.c  proxy_common.h  proxy_http.c  proxy_http_connector.c  proxy_http_int.h  proxy_http_rewriter.c  proxy_int.h
qemu/: Makefile  Makefile.objs  Makefile.target  README  arch_init.c  arm-semi.c  async.c  block.c  bswap.h  configure  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  cpus.c  cpus.h  def-helper.h  disas.c  dma-helpers.c  dyngen-exec.h  exec-all.h  exec-obsolete.h  exec.c  gdbstub.c  gen-icount.h  hmp.c  host-utils.c  (+34 more)
qemu-old/: Makefile.target  cocoa.m  configure  cpu-all.h  cpu-common.h  cpu-exec.c  dyngen-exec.h  exec-all.h  exec.c  gdbstub.c  hostregs_helper.h  migration-tcp.c  qemu-common.h  qemu-img.c  qemu-monitor.hx  savevm.c  softmmu_header.h  softmmu_template.h  sysemu.h  translate-all.c  vl.c
tools/autoconf/: AutoRegen.sh  aclocal.m4  configure.ac
(+1145 files in other folders)
